fixed hidden scrollbar

--- a/app/styles/_player_hud_component.scss
+++ b/app/styles/_player_hud_component.scss
@@ -10,6 +10,7 @@
   .scrollable_list {
     overflow: auto;
     height: 499px;
+    padding-right: 3px;
     margin-right: -17px;
   }
   .counter {
